k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: devtool
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-container
  template:
    metadata:
      labels:
        app: django-container
    spec:
      containers:
      - name: django-auth-app
        image: gopalgtm001/django-auth-api
        ports:
        - containerPort: 8000
        command: ["/bin/bash", "-c"]
        args:
          - "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
