k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: simple-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-1
  template:
    metadata:
      labels:
        app: simple-1
    spec:
      containers:
      - name:  django-auth-app
        image: gopalgtm001/django-auth
        ports:
        - containerPort: 8000
