k8s/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: devtool
spec:
  selector:
    app: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
