k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: simple-1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
